--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+@import url('https://cdn-uicons.flaticon.com/3.0.0/uicons-brands/css/uicons-brands.css');
 
 :root {
     --fundo: #0f172a;
@@ -179,6 +180,10 @@ main {
 }
 
 #celular a::before, #email a::before, #certificados a::before {
+    content: none;
+}
+
+#contato li::before {
     content: none;
 }
 
